# LectureCommon

./: NOTICE  README.rst
Notes/: grading.tex
Seats/: attendance.xlsx  seat_table.tex  seats.def  students.def
SheetApp/112-2-PM2/: main.js
SheetApp/113-1-GP1/: appsscript.json  hash.gs  index.html  main.gs  main.js  uploader.gs
SheetApp/113-2-GP2/: appsscript.PrivateNotification.json  hash.gs  index.html  main.gs
SheetApp/113-2-PM2/: appsscript.json  main.gs  mark.gs
SheetApp/FileRenamer/: appsscript.json  main.gs
ShuttleCard/: Shuttle-Icons.ai  Shuttle.xlsx
Similarity/: .gitignore  comparator.py  main.py  pyproject.toml
Syllabus/: PlotTools.wl  gradeplot.wl  schedule_tex2html
